--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <title>Kamil Salawa</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Allan&family=Fira+Sans+Extra+Condensed:wght@100&display=swap" rel="stylesheet"></head>
+    
 <body>
+
+<nav>
+  <div class="hamburger">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
+  <ul class="nav-links">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+
+<section class="landing">
+  <img class="gucci" src="./img/landing.png" alt="">
+  <h1>Naughty Boy Design</h1>
+</section>
+
   <div class="profile" > 
       <img class="rounded" src="./IMG_1405.jpeg" alt="">
   </div>
@@ -66,6 +86,6 @@
       <img src="./img/40.jpg" alt="">
     </div>
   </div>
-
+  <script src="./app.js"></script>
 </body>
 </html>
