--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="line"></div>
   </div>
   <ul class="nav-links">
-    <li><a href="#">About</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
@@ -28,6 +28,7 @@
 </section>
 
   <div class="profile" > 
+      <a name="about"></a>
       <img class="rounded" src="./IMG_1405.jpeg" alt="">
   </div>
   <div class="hallo">
@@ -40,6 +41,7 @@
   </div>
 
   <div class="row">
+    <a name="projects"></a>
     <div class="column">
       <img src="./img/1.jpg" alt="">
       <img src="./img/2.jpg" alt="">
@@ -86,6 +88,19 @@
       <img src="./img/40.jpg" alt="">
     </div>
   </div>
+
+  <div class="contact-section">
+
+    <h1 id="contact">Contact me</h1>
+   
+    <form action="contact-form" action="index.html" method="post"></form>
+      <input type="text" class="contact-form-text" placeholder="Your name">
+      <input type="email" class="contact-form-text" placeholder="Your e-mail">
+      <input type="text" class="contact-form-text" placeholder="Your phone">
+      <textarea class="contact-form-text" placeholder="Your message"></textarea>
+      <input type="submit" class="contact-form-btn" value="Send">
+</div>
+
   <script src="./app.js"></script>
 </body>
 </html>
